@@ -30,18 +30,16 @@ import org.elasticsearch.tasks.Task;
 import org.elasticsearch.tasks.TaskCancelHelper;
 import org.elasticsearch.tasks.TaskCancelledException;
 import org.elasticsearch.tasks.TaskId;
+import org.elasticsearch.tasks.TaskManager;
 import org.elasticsearch.test.ESTestCase;
-import org.elasticsearch.test.transport.CapturingTransport;
 import org.elasticsearch.threadpool.TestThreadPool;
 import org.elasticsearch.threadpool.ThreadPool;
-import org.elasticsearch.transport.TransportService;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
@@ -55,8 +53,7 @@ public class TransportLocalClusterStateActionTests extends ESTestCase {
     private static ThreadPool threadPool;
 
     private ClusterService clusterService;
-    private TransportService transportService;
-    private CapturingTransport transport;
+    private TaskManager taskManager;
 
     @BeforeClass
     public static void beforeClass() {
@@ -67,25 +64,14 @@ public class TransportLocalClusterStateActionTests extends ESTestCase {
     @Before
     public void setUp() throws Exception {
         super.setUp();
-        transport = new CapturingTransport();
         clusterService = createClusterService(threadPool);
-        transportService = transport.createTransportService(
-            clusterService.getSettings(),
-            threadPool,
-            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
-            x -> clusterService.localNode(),
-            null,
-            Collections.emptySet()
-        );
-        transportService.start();
-        transportService.acceptIncomingRequests();
+        taskManager = new TaskManager(clusterService.getSettings(), threadPool, Set.of());
     }
 
     @After
     public void tearDown() throws Exception {
         super.tearDown();
         clusterService.close();
-        transportService.close();
     }
 
     @AfterClass
@@ -97,19 +83,19 @@ public class TransportLocalClusterStateActionTests extends ESTestCase {
     public void testNoBlock() throws ExecutionException, InterruptedException {
         var request = new Request();
         PlainActionFuture<Response> listener = new PlainActionFuture<>();
-        ActionTestUtils.execute(new Action(transportService, clusterService), null, request, listener);
+        ActionTestUtils.execute(new Action(taskManager, clusterService), null, request, listener);
         assertTrue(listener.isDone());
         listener.get();
     }
 
     public void testRetryAfterBlock() throws ExecutionException, InterruptedException {
         var request = new Request();
-        ClusterBlock block = new ClusterBlock(1, "", true, true, false, randomFrom(RestStatus.values()), ClusterBlockLevel.ALL);
+        ClusterBlock block = new ClusterBlock(randomInt(), "", true, true, false, randomFrom(RestStatus.values()), ClusterBlockLevel.ALL);
         var state = ClusterState.builder(clusterService.state()).blocks(ClusterBlocks.builder().addGlobalBlock(block)).build();
         setState(clusterService, state);
 
         PlainActionFuture<Response> listener = new PlainActionFuture<>();
-        ActionTestUtils.execute(new Action(transportService, clusterService), null, request, listener);
+        ActionTestUtils.execute(new Action(taskManager, clusterService), null, request, listener);
 
         assertFalse(listener.isDone());
         setState(clusterService, ClusterState.builder(state).blocks(ClusterBlocks.EMPTY_CLUSTER_BLOCK).build());
@@ -119,12 +105,12 @@ public class TransportLocalClusterStateActionTests extends ESTestCase {
 
     public void testNonRetryableBlock() {
         var request = new Request();
-        ClusterBlock block = new ClusterBlock(1, "", false, true, false, randomFrom(RestStatus.values()), ClusterBlockLevel.ALL);
+        ClusterBlock block = new ClusterBlock(randomInt(), "", false, true, false, randomFrom(RestStatus.values()), ClusterBlockLevel.ALL);
         var state = ClusterState.builder(clusterService.state()).blocks(ClusterBlocks.builder().addGlobalBlock(block)).build();
         setState(clusterService, state);
 
         PlainActionFuture<Response> listener = new PlainActionFuture<>();
-        ActionTestUtils.execute(new Action(transportService, clusterService), null, request, listener);
+        ActionTestUtils.execute(new Action(taskManager, clusterService), null, request, listener);
 
         assertTrue(listener.isDone());
         var exception = assertThrows(ExecutionException.class, listener::get);
@@ -133,15 +119,15 @@ public class TransportLocalClusterStateActionTests extends ESTestCase {
 
     public void testTaskCancelledAfterBlock() {
         var request = new Request();
-        ClusterBlock block = new ClusterBlock(1, "", true, true, false, randomFrom(RestStatus.values()), ClusterBlockLevel.ALL);
+        ClusterBlock block = new ClusterBlock(randomInt(), "", true, true, false, randomFrom(RestStatus.values()), ClusterBlockLevel.ALL);
         var state = ClusterState.builder(clusterService.state()).blocks(ClusterBlocks.builder().addGlobalBlock(block)).build();
         setState(clusterService, state);
 
-        Task task = new CancellableTask(randomLong(), "test", Action.ACTION_NAME, "", TaskId.EMPTY_TASK_ID, Map.of());
+        CancellableTask task = new CancellableTask(randomLong(), "test", Action.ACTION_NAME, "", TaskId.EMPTY_TASK_ID, Map.of());
         PlainActionFuture<Response> listener = new PlainActionFuture<>();
-        ActionTestUtils.execute(new Action(transportService, clusterService), task, request, listener);
+        ActionTestUtils.execute(new Action(taskManager, clusterService), task, request, listener);
 
-        TaskCancelHelper.cancel((CancellableTask) task, "test");
+        TaskCancelHelper.cancel(task, "test");
         assertFalse(listener.isDone());
         setState(clusterService, ClusterState.builder(state).blocks(ClusterBlocks.EMPTY_CLUSTER_BLOCK).build());
         assertTrue(listener.isDone());
@@ -172,20 +158,14 @@ public class TransportLocalClusterStateActionTests extends ESTestCase {
     private static class Action extends TransportLocalClusterStateAction<Request, Response> {
         static final String ACTION_NAME = "internal:testAction";
 
-        Action(TransportService transportService, ClusterService clusterService) {
-            super(
-                ACTION_NAME,
-                new ActionFilters(Set.of()),
-                transportService.getTaskManager(),
-                clusterService,
-                EsExecutors.DIRECT_EXECUTOR_SERVICE
-            );
+        Action(TaskManager taskManager, ClusterService clusterService) {
+            super(ACTION_NAME, new ActionFilters(Set.of()), taskManager, clusterService, EsExecutors.DIRECT_EXECUTOR_SERVICE);
         }
 
         @Override
         protected void localClusterStateOperation(Task task, Request request, ClusterState state, ActionListener<Response> listener)
             throws Exception {
-            listener.onResponse(new Response()); // default implementation, overridden in specific tests
+            listener.onResponse(new Response());
         }
 
         @Override
